# WikiLex-Searcher

./: .gitmodules  CMakeLists.txt  README.md
data/: simplified_lexemes.json
include/: cpp-httplib  cppjieba  hnswlib
lemwwwroot/: index.html
model/sentence-bert/: loadmodel.py  vectorize.py
src/: bloomfilter.hpp  dict  lemdebug.cpp  lemindex.hpp  lemlog.hpp  lemsearcher.hpp  lemserver.cpp  lemutil.hpp  lemvectorize.cpp  lemvectorize.py  mysql_util.hpp  redis_util.hpp  simplify_lexemes.cpp
tmp/: Makefile
